# binky

./: Cargo.toml  README.md  REQ.md
src/: error.rs  frame.rs  lib.rs  main.rs  queue.rs  request.rs  retry.rs  serializer.rs  value.rs
src/address/: mod.rs
src/agent/: bridge.rs  local.rs  mod.rs  session.rs  writer.rs
src/bridge/: message.rs  mod.rs  net.rs
src/net/: connection.rs  listener.rs  mod.rs
src/router/: message.rs  mod.rs  session.rs
src/slab/: keys.rs  mod.rs
src/storage/: agents.rs  mod.rs  slab.rs
tests/: server.rs
