[package]
name = "binky"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
flume = "0.11.0"
log = "0.4.21"
postcard = { version = "1.0.8", features = ["use-std"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["net", "rt-multi-thread", "macros", "io-util", "time"] }
tracing = "0.1.40"
